Fixed: Width and scrollbar problem #265

--- a/www/views/Extjs3/themes/Paper/src/_ext.scss
+++ b/www/views/Extjs3/themes/Paper/src/_ext.scss
@@ -448,8 +448,10 @@
 	
 	&-helptext {
 		@extend %font-caption;
-		white-space: pre-wrap;
+		/*white-space: pre-wrap;*/
 		line-height: 1.6em;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 	
 }
